2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/08_ClassAextendB.deca
// Description:
//    Programme utilisation de extends avec qlqs methode et champs
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 15/01/2024
class A {
    protected int x;
    int getX()
    {
        return x;
    }
}

class B extends A{
    int y;
    int getY()
    {
       return this.y;
    }
}